--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/square-logo.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="MeantSee’s predictive insights platform is built to help enterprises unlock their data to see the future, easily and quickly.">
   
   
-  <title>Home</title>
+  <title>MeantSee | Predictive Data Science</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -315,7 +315,7 @@
                     <div class="bg"></div>
                     <div class="form-wrap" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pxRo14xLwI0fU50ikdU0JvoGiMpGkxyE0lWmzL4I0AThNGWl6X6/X72UEcqrv856NsJSmCJdgo/Ul+37XkWBV/vxlNrM/IFwRDHXsIomTZXl8RlAb4G1a6RFnS7+4J1x.XanEtse27kyVgczplzeOPtbKwUoJtOTmNMCBatj5HG7OrPBiUGDi12/88OQnxhIWEYbwu2Mp7y1m5E8cenJXgzlU+uU6plw7evAHyc13TG9Yy9rFVFgyWB4cjeslNt06">
+                        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g8NWsLQSzfaJQL73LZ0M9NuUchHMX1s2K3Za2ylZldT12IRteKQWe4o9mlHW+bbNsYKSoJTw1Pd/nGeIaqU6CLEWuVOnjkvAiDfeskrJiCop+CA1Ge7l5u5pfMb0qoG+.tbaECw+nOd/sfu77Kn8tewKaGG/MIKXNtO14HCK7fId+DfjoUtQy4atcVxWSSPMap5hWrGji0GzFwCZqUd9aQO5KBhjIwgZqJfogVfjwgxFq1kaGV4/CKBpKOJaKV1OW">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting MeantSee - we will get back to you as soon as possible.</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
